--- a/package.json
+++ b/package.json
@@ -13,16 +13,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~13.2.2",
-    "@angular/core": "~13.2.2",
-    "@angular/forms": "~13.2.2",
-    "@angular/platform-browser": "~13.2.2",
-    "@angular/platform-browser-dynamic": "~13.2.2",
-    "@angular/router": "~13.2.2",
+    "@angular/animations": "~13.3.9",
+    "@angular/cdk": "^13.3.7",
+    "@angular/common": "~13.3.9",
+    "@angular/core": "~13.3.9",
+    "@angular/flex-layout": "^13.0.0-beta.38",
+    "@angular/forms": "~13.3.9",
+    "@angular/material": "^13.3.7",
+    "@angular/platform-browser": "~13.3.9",
+    "@angular/platform-browser-dynamic": "~13.3.9",
+    "@angular/router": "~13.3.9",
+    "@capacitor/android": "3.5.1",
     "@capacitor/app": "1.1.1",
+    "@capacitor/camera": "^1.3.1",
+    "@capacitor/clipboard": "^1.0.8",
     "@capacitor/core": "3.5.1",
-    "@capacitor/haptics": "1.1.4",
+    "@capacitor/geolocation": "^1.3.1",
+    "@capacitor/haptics": "^1.1.4",
     "@capacitor/keyboard": "1.2.2",
+    "@capacitor/local-notifications": "^1.1.0",
+    "@capacitor/push-notifications": "^1.0.9",
+    "@capacitor/splash-screen": "^1.2.2",
     "@capacitor/status-bar": "1.0.8",
     "@ionic/angular": "^6.0.0",
     "rxjs": "~6.6.0",
@@ -36,11 +47,12 @@
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
     "@angular/cli": "~13.2.3",
-    "@angular/compiler": "~13.2.2",
-    "@angular/compiler-cli": "~13.2.2",
-    "@angular/language-service": "~13.2.2",
+    "@angular/compiler": "~13.3.9",
+    "@angular/compiler-cli": "~13.3.9",
+    "@angular/language-service": "~13.3.9",
     "@capacitor/cli": "3.5.1",
     "@ionic/angular-toolkit": "^6.0.0",
+    "@ionic/lab": "3.2.12",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
