--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/camera": "^1.3.1",
     "@capacitor/clipboard": "^1.0.8",
     "@capacitor/core": "3.5.1",
+    "@capacitor/filesystem": "^1.1.0",
     "@capacitor/geolocation": "^1.3.1",
     "@capacitor/haptics": "^1.1.4",
     "@capacitor/keyboard": "1.2.2",
@@ -35,7 +36,9 @@
     "@capacitor/push-notifications": "^1.0.9",
     "@capacitor/splash-screen": "^1.2.2",
     "@capacitor/status-bar": "1.0.8",
+    "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^6.0.0",
+    "@ionic/pwa-elements": "^3.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
     "zone.js": "~0.11.4"
